# ISRL

./: .bashrc.save  .directory  .gitignore  README.md  how_to_run.txt  main.py  run.py
controller/: CMakeLists.txt  backup.txt  how_to_run.txt  package.xml
controller/launch/: controller.launch  controller_empty.launch  controller_random.launch  controller_raspberry_car.launch  move_base.launch  nodes.launch  prova.launch  robot.launch
controller/param/: filter_conf.yaml
controller/src/: behaviour1.pl  behaviour_else_random.pl  robot.py
mio_robot/: CMakeLists.txt  package.xml
mio_robot/launch/: mio_robot_base_rviz.launch  mio_robot_base_rviz_gazebo.launch  mio_robot_simulator_rviz.launch  mio_robot_world_gazebo.launch  mio_robot_world_gazebo_rviz.launch  mio_robot_world_gazebo_t3.launch
mio_robot/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml
mio_robot/urdf/: mio_robot.xacro  mio_robot_gazebo_plugins.xacro  mio_robot_libro.xacro
mio_robot/worlds/: walled_room_with_obstacles.world  world_home.world  world_home1.world
prothonics/: __init__.py
raspberry_car/: CMakeLists.txt  package.xml
raspberry_car/launch/: prova.launch  raspberry_car.launch  raspberry_car_direction.launch  (+2 more)
robot/: how_to_run.txt
robot/src/: robot.py
simulator_teleop/: CMakeLists.txt  package.xml  setup.py
simulator_teleop/launch/: simulator_teleop.launch
simulator_teleop/nodes/: simulator_teleop
teleop/: CMakeLists.txt  package.xml
teleop/launch/: teleop.launch
teleop/nodes/: teleop_key
two_w/: CMakeLists.txt  package.xml
(+17 files in other folders)
