<?xml version="1.0"?>
<package format="2">
  <name>teleop</name>
  <version>1.2.1</version>
  <description>Teleop for raspberry_car</description>
  <license>BSD</license>
  <maintainer email="luigi@todo.todo">luigi</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
